--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container">
 
             <div class="box">
-                <a href="../متجر الكتروني/المنتجات/1/index.html" class="link_btn"></a>
+                <a href=""المنتجات/1/index.html"" class="link_btn"></a>
                 <img src="img/banner3_1.jpg" alt="">
                 <div class="text">
                     <h5> علبتين زيت بروكسي + مشط</h5>
